src/objects/TR1__ContactDocument__c.object
<CustomObject>
    <fields>
        <fullName>TR1__AttachmentId_Legacy__c</fullName>
        <label>AttachmentId (Legacy)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Documents</relationshipLabel>
        <relationshipName>Contact_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__ContentDistributionId__c</fullName>
        <description>ContentDistributionId.</description>
        <label>ContentDistributionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ContentDocumentId__c</fullName>
        <description>ContentDocumentId.</description>
        <label>ContentDocumentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ContentVersionFileExtension__c</fullName>
        <label>ContentVersionFileExtension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ContentVersionFileType__c</fullName>
        <label>ContentVersionFileType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ContentVersionId__c</fullName>
        <description>ContentVersionId.</description>
        <label>ContentVersionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Convert_to_Content_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Document Conversion</inlineHelpText>
        <label>Convert to Content Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Delete_Attachment__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Delete the attachment after conversion.</inlineHelpText>
        <label>Delete Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__External_Candidate_Id__c</fullName>
        <formula>TR1__Contact__r.TR1__External_Candidate_Id__c</formula>
        <label>External Candidate Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__External_URL__c</fullName>
        <label>External URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TR1__External_View_URL__c</fullName>
        <label>External View URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TR1__File_Download__c</fullName>
        <formula>IF (NOT(ISBLANK( TR1__Internal_URL__c )),HYPERLINK(&apos;/apex/TR1__ResumeDownloadPage?Id=&apos;&amp;Id,IMAGE(&quot;/resource/TR1__DownloadButton&quot;, &quot;Download&quot;),&quot;_blank&quot;),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Download</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__FlashAttachmentId_Legacy__c</fullName>
        <label>FlashAttachmentId (Legacy)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__HTML_URL__c</fullName>
        <label>HTML URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TR1__Internal_URL__c</fullName>
        <label>Internal URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TR1__Internal_View_URL__c</fullName>
        <label>Internal View URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TR1__SMWS_Date_Time__c</fullName>
        <label>SMWS Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__SMWS_Status_Code__c</fullName>
        <label>SMWS Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SMWS_Status__c</fullName>
        <label>SMWS Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__ScrambledCV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ScrambledCV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resume</fullName>
                </value>
                <value>
                    <fullName>Cover Letter</fullName>
                </value>
                <value>
                    <fullName>References</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__View__c</fullName>
        <formula>HYPERLINK(&apos;/apex/TR1__ResumeViewer?Id=&apos;&amp;Id,IMAGE(&quot;/resource/TR1__ViewButton&quot;, &quot;View&quot;),&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__isDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Document</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>TR1__Convert_to_Content_Document__c</columns>
        <columns>TR1__ContentDistributionId__c</columns>
        <columns>TR1__ContentDocumentId__c</columns>
        <columns>TR1__ContentVersionId__c</columns>
        <columns>TR1__AttachmentId_Legacy__c</columns>
        <columns>TR1__FlashAttachmentId_Legacy__c</columns>
        <columns>TR1__Internal_URL__c</columns>
        <columns>TR1__Internal_View_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contact Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>